# os-bridge

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.ko.md  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
electron-probe/: .env.example  README.md  electron-builder.config.cjs  entitlements.mac.plist  main.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preload.js  tsconfig.json  vite.config.ts
electron-probe/main/: index.ts  notification.ts  preload.ts
electron-probe/renderer/: index.html
electron-probe/renderer/src/: App.tsx  styles.css  vite-env.d.ts
electron-probe/scripts/: ad-hoc-sign-mac.js  dev.js  env.js  pack.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/features/: mod.rs
src/features/notification_permission/: mod.rs
src/features/notification_permission/platform/: macos.rs  mod.rs  windows.rs
