
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "os_bridge"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
objc  = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["UI_Shell"] }
winreg  = "0.52.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
